fix to name/subreddit hover effect z-index

--- a/frontend/src/components/SubredditHover/subredditHover.css
+++ b/frontend/src/components/SubredditHover/subredditHover.css
@@ -8,7 +8,7 @@
     position: absolute;
     top: 100%;
     left: 0;
-    z-index: 1;
+    /* z-index: 1; */
     display: block;
     width: 300px;
     padding: 20px;
